# graft-db

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  continue.txt
crates/graft-alloc/: Cargo.toml
crates/graft-alloc/src/: arena.rs  lib.rs  slab.rs
crates/graft-cli/: Cargo.toml
crates/graft-cli/src/: main.rs
crates/graft-client/: Cargo.toml
crates/graft-client/examples/: bench_wire.rs
crates/graft-client/src/: lib.rs
crates/graft-core/: Cargo.toml
crates/graft-core/src/: constants.rs  error.rs  id.rs  lib.rs  property.rs  protocol.rs
crates/graft-io/: Cargo.toml
crates/graft-io/src/: lib.rs  posix.rs  sim.rs  uring.rs
crates/graft-query/: Cargo.toml
crates/graft-query/src/: ast.rs  executor.rs  lexer.rs  lib.rs  parser.lalrpop  planner.rs
crates/graft-repl/: Cargo.toml
crates/graft-repl/src/: commit_buffer.rs  lib.rs  protocol.rs  receiver.rs  registry.rs  retention.rs  sender.rs  shared_queue.rs
crates/graft-runtime/: Cargo.toml
crates/graft-runtime/benches/: persistence.rs  query.rs
crates/graft-runtime/src/: affinity.rs  cluster.rs  database.rs  event_loop.rs  label.rs  lib.rs  message.rs  shard.rs  spsc.rs
crates/graft-server/: Cargo.toml
crates/graft-server/src/: admin.rs  identity.rs  main.rs  metrics.rs  replication.rs
crates/graft-server/tests/: replication.rs  wire_protocol.rs
crates/graft-sim/: Cargo.toml
crates/graft-sim/src/: lib.rs
crates/graft-storage/: Cargo.toml
crates/graft-storage/benches/: page_ops.rs
crates/graft-storage/src/: buffer_pool.rs  lib.rs  page.rs  record.rs
crates/graft-txn/: Cargo.toml
crates/graft-txn/src/: lib.rs  mvcc.rs  transaction.rs  wal.rs
docs/: architecture.md  storage.md  transactions.md  users-guide.md
research/: 01-architecture-landscape.md  02-user-sentiment.md  03-ops-scalability-innovation.md  04-database-as-os.md  05-strategic-synthesis.md  06-replication-design.md
tasks/: code-review-findings.md  lessons.md  todo.md
