[package]
name = "graft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and constants for the graft graph database"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
