[package]
name = "graft-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shard-per-core runtime: core pinning, message passing, event loop"

[dependencies]
graft-core = { workspace = true }
graft-query = { workspace = true }
graft-storage = { workspace = true }
graft-io = { workspace = true }
graft-txn = { workspace = true }
graft-repl = { workspace = true }
hashbrown = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "query"
harness = false

[[bench]]
name = "persistence"
harness = false
