[package]
name = "graft-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TCP server: binary wire protocol, connection routing"

[[bin]]
name = "graft-server"
path = "src/main.rs"

[dependencies]
graft-core = { workspace = true }
graft-runtime = { workspace = true }
graft-query = { workspace = true }
graft-repl = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
graft-client = { workspace = true }
